[project]
name = "sc-agent"
version = "0.1.0"
description = "An AI agent for single-cell RNA-seq analysis (LangChain Deep Agents + scanpy)"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.3",
    "langchain-openai>=0.2",
    "langgraph-cli[inmem]>=0.2",
    "scanpy>=1.10",
    "anndata>=0.10",
    "leidenalg>=0.10",
    "igraph>=0.11",
    "umap-learn>=0.5",
    "scikit-misc>=0.3",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sc_agent"]
